plugins {
  id "java"
  id "application"
  id "com.github.johnrengelman.shadow" version "5.2.0"
}
sourceCompatibility = "1.8"
targetCompatibility = "1.8"
project.buildDir = "target"

repositories {
  mavenCentral()
  jcenter()
}

dependencies {
  implementation group: "org.apache.commons", name: "commons-text", version: "1.8"
  implementation group: "com.typesafe", name: "config", version: "1.4.0"

  compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'

  compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.66'
  compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.66'
  compile group: 'org.bouncycastle', name: 'bctls-jdk15on', version: '1.66'

  compileOnly "org.projectlombok:lombok:1.18.10"
  testImplementation "org.projectlombok:lombok:1.18.10"
  annotationProcessor "org.projectlombok:lombok:1.18.10"

  testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
}

test {
  useJUnitPlatform()

  testLogging {
    events "passed", "skipped", "failed"
  }

  testLogging.showStandardStreams = true

  jvmArgs "-Duser.timezone=UTC -Dconfig.trace=loads -Dconfig.override_with_env_vars=true -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"

  minHeapSize = "128m"
  maxHeapSize = "1g"
}

jar {
  zip64 true

  manifest {
    attributes(
      "Class-Path": configurations.runtimeClasspath.collect { it.getName() }.join(" ")
    )
  }

  exclude "META-INF/*.RSA", "META-INF/*.SF","META-INF/*.DSA"
}

shadowJar {
  zip64 true
}
